@@ -12,8 +12,8 @@ from typhon.plots import (figsize, mpl_colors)
 x = np.linspace(0, 10, 100)
 
 fig, ax = plt.subplots(figsize=figsize(10))
-ax.set_prop_cycle(color=mpl_colors('qualitative1', 20))
-for c in np.arange(20):
+ax.set_prop_cycle(color=mpl_colors('qualitative1', 7))
+for c in np.arange(1, 8):
     ax.plot(x, (15 + x) * c, linewidth=3)
 
 fig.tight_layout()
