@@ -23,7 +23,7 @@ _qualitative1_data = [
 
 _qualitative2_data = [
     [0.55294118, 0.82745098, 0.78039216],
-    [1.00000000, 1.00000000, 0.70196078],
+    [1.00000000, 0.92941176, 0.43529412],
     [0.74509804, 0.72941176, 0.85490196],
     [0.98431373, 0.50196078, 0.44705882],
     [0.50196078, 0.69411765, 0.82745098],
